<resources>
    <string name="app_name">PMI Depok</string>
    <string name="title_activity_maps">Map</string>
    <string name="_1_usia_17_60_tahun_usia_17_tahun_diperbolehkan_menjadi_donor_bila_mendapat_izin_tertulis_dari_orangtua">1. Usia 17-60 tahun (usia 17 tahun diperbolehkan menjadi donor bila mendapat izin tertulis dari orangtua).</string>
    <string name="menjaga_kesehatan_jantung_tingginya_kadar_zat_besi_dalam_darah_akan_membuat_seseorang_menjadi_lebih_rentan_terhadap_penyakit_jantung_zat_besi_yang_berlebihan_di_dalam_darah_bisa_menyebabkan_oksidasi_kolesterol_produk_oksidasi_tersebut_akan_menumpuk_pada_dinding_arteri_dan_ini_sama_dengan_memperbesar_peluang_terkena_serangan_jantung_dan_stroke_saat_kita_rutin_mendonorkan_darah_maka_jumlah_zat_besi_dalam_darah_bisa_lebih_stabil_ini_artinya_menurunkan_risiko_penyakit_jantung">Menjaga kesehatan jantung Tingginya kadar zat besi dalam darah akan membuat seseorang menjadi lebih rentan terhadap penyakit jantung. Zat besi yang berlebihan di dalam darah bisa menyebabkan oksidasi kolesterol. Produk oksidasi tersebut akan menumpuk pada dinding arteri dan ini sama dengan memperbesar peluang terkena serangan jantung dan stroke. Saat kita rutin mendonorkan darah maka jumlah zat besi dalam darah bisa lebih stabil. Ini artinya menurunkan risiko penyakit jantung.</string>
    <string name="donor_darah_juga_akan_membantu_tubuh_mengurangi_jumlah_sel_darah_merah_dalam_darah_tak_perlu_panik_dengan_berkurangnya_sel_darah_merah_karena_sumsum_tulang_belakang_akan_segera_mengisi_ulang_sel_darah_merah_yang_telah_hilang_hasilnya_sebagai_pendonor_kita_akan_mendapatkan_pasokan_darah_baru_setiap_kali_kita_mendonorkan_darah_oleh_karena_itu_donor_darah_menjadi_langkah_yang_baik_untuk_menstimulasi_pembuatan_darah_baru">Donor darah juga akan membantu tubuh mengurangi jumlah sel darah merah dalam darah. Tak perlu panik dengan berkurangnya sel darah merah, karena sumsum tulang belakang akan segera mengisi ulang sel darah merah yang telah hilang. Hasilnya, sebagai pendonor kita akan mendapatkan pasokan darah baru setiap kali kita mendonorkan darah. Oleh karena itu, donor darah menjadi langkah yang baik untuk menstimulasi pembuatan darah baru.</string>
    <string name="meningkatkan_produksi_sel_darah_merah">Meningkatkan produksi sel darah merah</string>
    <string name="membantu_menurunkan_berat_badan">Membantu menurunkan berat badan</string>
    <string name="menjadi_donor_darah_adalah_salah_satu_metode_diet_dan_pembakaran_kalori_yang_ampuh_sebab_dengan_memberikan_sekitar_450_ml_darah_akan_membantu_proses_pembakaran_kalori_kira_kira_650_itu_adalah_jumlah_kalori_yang_banyak_untuk_membuat_pinggang_kita_ramping">Menjadi donor darah adalah salah satu metode diet dan pembakaran kalori yang ampuh. Sebab dengan memberikan sekitar 450 ml darah, akan membantu proses pembakaran kalori kira-kira 650. Itu adalah jumlah kalori yang banyak untuk membuat pinggang kita ramping.</string>
    <string name="menyumbangkan_hal_yang_tidak_ternilai_harganya_kepada_yang_membutuhkan_akan_membuat_kita_merasakan_kepuasan_psikologis_sebuah_penelitian_menemukan_orang_usia_lanjut_yang_rutin_menjadi_pendonor_darah_akan_merasakan_tetap_berenergi_dan_bugar">Menyumbangkan hal yang tidak ternilai harganya kepada yang membutuhkan akan membuat kita merasakan kepuasan psikologis. Sebuah penelitian menemukan, orang usia lanjut yang rutin menjadi pendonor darah akan merasakan tetap berenergi dan bugar.</string>
</resources>
